# codebase_parser

./: README.md  pyproject.toml
data/: codebase_analysis.json  llm_analysis.json  llm_context.json  llm_prompt.txt  raw_response.txt
data/tests/: test_context_chunker.py
docs/: ARCHITECTURE.md
src/: main.py
src/analyzer/: codebase_agent.py  codebase_parser.py  dead_code_analyzer.py  llm_context.py
test_project/: __init__.py  main.py
test_project/config/: settings.py
test_project/models/: product.py  user.py
test_project/utils/: helpers.py
tests/: test_dead_code_analyzer.py  test_parser.py
